--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+   "start": "node main.js",
+    "dev": "nodemon main.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DmytroBer/backend-course-2025-4.git"
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/DmytroBer/backend-course-2025-4#readme",
   "dependencies": {
     "commander": "^14.0.2"
+  },
+    "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
