--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-   "start": "node main.js",
+    "start": "node main.js",
     "dev": "nodemon main.js"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DmytroBer/backend-course-2025-4.git"
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/DmytroBer/backend-course-2025-4#readme",
   "dependencies": {
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "fast-xml-parser": "^5.3.0"
   },
-    "devDependencies": {
+  "devDependencies": {
     "nodemon": "^3.0.0"
   }
 }
